Add zone sizing (#15)
* Add next zone choosing

* Add unit test for zone tick

* Fix zone tick unit tests

* Add start zone tick

* Add simple start unit test

* Fix tick start unit test

* Add sub zone event api method

* Add zone controller check

* Add start zone controller on spot start

* Add sub

* Fix server zone ticker

* Fix log and remove unused fields

* Fix zone tick bugs

* Fix zone position bug

* Improve accuracy

* Fix zone tick algorithm

* Fix zone ticking start time

* Fix get initial zone

* Fix game UI

* Fix show error on spot settings page

* Add feature for chaning env in realtime

* Fix client tests

* Fix unit tests and lint
