# server/pkg/api/spot/v1/create.go
@@ -21,17 +21,16 @@ func (s *SpotServiceServer) CreateSpot(ctx context.Context, request *proto.Creat
 
 	s.SpotsMap.Store(spotUUID, *spot.NewSpot(
 		s2.LatLngFromDegrees(request.Position.Latitude, request.Position.Longitude),
-		request.Radius,
+		request.RadiusInM,
 		time.Second*time.Duration(request.ScanPeriodInSeconds),
 		time.Second*time.Duration(request.ZonePeriodInSeconds),
-		time.Second*time.Duration(request.SessionDurationInSeconds),
 	))
 	s.log.WithField("uuid", spotUUID).Debug("New spot created")
 
 	response := proto.CreateSpotResponse{
 		SpotUuid: spotUUID.String(),
 	}
-	s.log.WithField("response", response.String()).Trace("Create spot response")
+	s.log.WithField("response", response.String()).Debug("Create spot response")
 
 	return &response, nil
 }
